[package]
name = "serialmessage"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/LukaOber/serialmessage-rs"
documentation = "https://docs.rs/serialmessage/"
description = "Pack serial data into a fast, reliable, and packetized form for communicating with e.g. a Microcontroller."
keywords = ["serial", "microcontroller", "packets", "no_std"]
categories = ["no-std", "embedded", "encoding"]

[dependencies]
cfg-if = "1.0.0"

[dev-dependencies]
zerocopy = "0.6.1"
serialport = "4.2.0"

[features]
default = ["alloc"]
alloc = []
